footer and support modal

--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -36,3 +36,123 @@ html {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.support-button {
+  background: #f7d65a;
+  -webkit-mask: url("https://raw.githubusercontent.com/robin-dela/css-mask-animation/master/img/urban-sprite.png");
+  mask: url("https://raw.githubusercontent.com/robin-dela/css-mask-animation/master/img/urban-sprite.png");
+  -webkit-mask-size: 2300% 100%;
+  mask-size: 3000% 100%;
+  border: none;
+  color: #1b2be0;
+
+  cursor: pointer;
+  -webkit-animation: ani2 0.7s steps(29) forwards;
+  animation: ani2 0.7s steps(29) forwards;
+}
+
+.support-button:hover {
+  -webkit-animation: ani 0.7s steps(29) forwards;
+  animation: ani 0.7s steps(29) forwards;
+}
+
+.button-container-2 {
+  position: relative;
+  width: 250px;
+  height: 50px;
+  text-align: center;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.mask {
+  position: absolute;
+  color: #f7d65a;
+  background-color: #1b2be0;
+  text-align: center;
+  overflow: hidden;
+}
+
+.copy-btn {
+  font-size: 18px;
+  font-weight: 600;
+  background: #1b2be0;
+  color: #f7d65a;
+  border: 0.25rem solid #1b2be0;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+button:hover {
+  color: #1b2be0;
+}
+
+.copy-btn::after {
+  transition: all 0.3s ease;
+}
+.copy-btn:hover::after {
+  transition: all 0.3s ease-out;
+}
+.copy-btn::after {
+  content: "";
+  background: #f7d65a;
+  position: absolute;
+  z-index: -1;
+  display: block;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transform: scale(0, 0);
+}
+.copy-btn:hover::after {
+  transform: scale(1, 1);
+}
+
+@-webkit-keyframes ani {
+  from {
+    -webkit-mask-position: 0 0;
+    mask-position: 0 0;
+  }
+
+  to {
+    -webkit-mask-position: 100% 0;
+    mask-position: 100% 0;
+  }
+}
+
+@keyframes ani {
+  from {
+    -webkit-mask-position: 0 0;
+    mask-position: 0 0;
+  }
+
+  to {
+    -webkit-mask-position: 100% 0;
+    mask-position: 100% 0;
+  }
+}
+
+@-webkit-keyframes ani2 {
+  from {
+    -webkit-mask-position: 100% 0;
+    mask-position: 100% 0;
+  }
+
+  to {
+    -webkit-mask-position: 0 0;
+    mask-position: 0 0;
+  }
+}
+
+@keyframes ani2 {
+  from {
+    -webkit-mask-position: 100% 0;
+    mask-position: 100% 0;
+  }
+
+  to {
+    -webkit-mask-position: 0 0;
+    mask-position: 0 0;
+  }
+}
