--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -58,8 +58,7 @@ html {
 
 .button-container-2 {
   position: relative;
-  width: 250px;
-  height: 50px;
+  width: 140px;
   text-align: center;
   overflow: hidden;
   transition: 0.5s;
@@ -74,7 +73,7 @@ html {
 }
 
 .copy-btn {
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 600;
   background: #1b2be0;
   color: #f7d65a;
@@ -107,6 +106,28 @@ button:hover {
 }
 .copy-btn:hover::after {
   transform: scale(1, 1);
+}
+
+@media screen and (min-width: 640px) {
+  .button-container-2 {
+    width: 200px;
+  }
+
+  .copy-btn {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .button-container-2 {
+    width: 150px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .button-container-2 {
+    width: 250px;
+  }
 }
 
 @-webkit-keyframes ani {
